cosinnus/static/less/fullcalendar.less
.fullcalendar(@light,@normal,@dark) {
    
    .fc-event-title {
        font-size: 11px;
        white-space: normal;
        max-height: 34px;
        word-break: break-all;
    }

	.fc-h-event {
		background-color: @normal;
		border: 1px solid @normal;
	}

	.fc-list-event-dot {
		border: 5px solid @app-neutral-color-white;
	}

	.fc-button {
		border-radius: 0;
	}

	.fc-daygrid-event-dot {
		border: 4px solid @normal;
	}

	// The header
	.fc-header-title h2 {
		font-size: 1.5em;
		color: @app-neutral-color-dark;
		cursor: default;
	}

	.fc-header-toolbar {
		margin-top: 0.5em;
		margin-left: 0.5em;
		margin-right: 0.5em;
	}
	
	.fc-footer-toolbar {
		margin-top: 1em;
		margin-bottom: 1em;
		margin-left: 0.5em;
		margin-right: 0.5em;

		.fc-toolbar-title {
			font-size: 13px;
		}
	}

	.fc-button {
		background-color: @normal;
		border-width: 0;
		background-image: none;
		padding: 0 0.5em;
		color: @app-neutral-color-white;
	}
	.fc-text-arrow {
		margin: 0;
	}
	.fc-button.fc-state-disabled {
		opacity: 1;
		background-color: transparent;
		color: @app-neutral-color-dark;
	}
	.fc-button.fc-state-default {
		border-radius: 0;
		text-shadow: none;
	}
	.fc-button + .fc-button {
		border-left: 1px solid @light;
	}

	// The events table
	.fc-content {
		background-color: #FFFFFF;
		color: @app-neutral-color-dark;
		font-size: 0.8em;
	}
	.fc-state-highlight {
		background-color: @light;
	}

	// Single events in events calendar and table
    .fc-event {
		border-radius: 0;
		background-color: @normal;
		border-color: @normal;
		cursor: pointer;
        color: @app-neutral-color-white;
        
        &:hover, &:hover td {
            background-color: @dark;
            border-color: @dark;
        }
		
		&.event-special {
		    background-color: @dark;
		}
	}

	// selected days for event creation
	.fc-cell-overlay {
		background-color: @normal;
	}

	/* ##### Small calendar ####### */
	.small-calendar {
		width: 225px;
		
        .fc-toolbar-title {
            font-size: 16px;
            font-weight: bold;
        }
        .fc-col-header-cell.fc-day {
            font-size: 11px;
        }
		.fc-daygrid-day-events {
			min-height: 0;
			margin: 0;
		}

		.fc-header {
			background-color: @normal;
			margin-bottom: 5px;
		}
		.fc-header .fc-button {
			background-color: @dark;
		}
		.fc-header > * {
			line-height: 0;
		}
		.fc-header .fc-header-title h2 {
			font-size: 1.2em;
			line-height: 1.5em;
			margin-bottom: 0;
			color: @app-neutral-color-white;
		}

		.fc-day-number,
		.fc-day-header {
			line-height: 1.8em;
		}
		.fc-day:hover {
			background-color: @light;
		}

		.fc-day-header,
		.fc-border-separate tr.fc-last th,
		.fc-border-separate tr.fc-last td,
		.fc-border-separate tr.fc-last th,
		.fc-border-separate tr.fc-last td {
			border-width: 0;
		}

		.fc-day {
			border: 1px solid @app-neutral-color-light;
		}
		.fc-day.selected {
			background-color: @normal;
			color: @app-neutral-color-white;
		}

		.fc-border-separate tbody tr.fc-first td,
		.fc-border-separate tr.fc-last td {
			border-width: 1px;
		}

		.fc-day.fc-other-month:hover {
		border-color: transparent;
		}
		.fc-other-month .fc-day-number {
			color: transparent;
		}
		.fc-border-separate tbody .fc-day.fc-other-month {
			border-width: 0;
		}
	}

	.modal .modal-sm .small-calendar {
		width: 100%;
	}


	// ##### Date picker popup widget #######

	.pickDateButton .pickDateBox {
		width: 200px;
		height: 200px;
		background-color: red;
	}
}

.fc-button-today.fc-state-disabled {
    display: none;
}

/** Fitting the Big Calendar on the group dashboard requires moving the date header */
.calendar-dashboard {
    position: relative;
    
    .fc-header {
        margin-bottom: 5px;
    }
    .fc-header-title {
        position: absolute;
        right: 2px;
        bottom: 1px;
        font-size: 10px;
        height: 20px;
        z-index: 2;
        background: white;
        padding-right: 5px;
    }
    .fc-toolbar {
        margin-bottom: 1em !important;
    }
    .fc-toolbar-title {
        font-size: 16px;
    }
}
.calendar-profile {
    .fc-header-toolbar {
        margin: 0.5em 0 !important;
    }
    .fc-footer-toolbar {
        margin: 0.5em 0 !important;
    }
}

.fc {
    .fc-toolbar-title {
        padding: 5px 0 0 8px;
    }
}

/** Fix z-index popping into navbar */
.fc-event-container {
	z-index: 4 !important;
}

.fc-theme-standard {
    background-color: #ffffff;
    &, a {
        color: @text-color;
    }
}

.app-main {
	.fullcalendar(@app-main-color-light,@app-main-color,@app-main-color-dark);
}
.app-calendar {
	.fullcalendar(@app-calendar-color-light,@app-calendar-color,@app-calendar-color-dark);
}
.app-files {
	.fullcalendar(@app-files-color-light,@app-files-color,@app-files-color-dark);
}
.app-documents {
	.fullcalendar(@app-documents-color-light,@app-documents-color,@app-documents-color-dark);
}
.app-poll {
	.fullcalendar(@app-poll-color-light,@app-poll-color,@app-poll-color-dark);
}
.app-marketplace {
    .fullcalendar(@app-marketplace-color-light,@app-marketplace-color,@app-marketplace-color-dark);
}
.app-message {
    .fullcalendar(@app-message-color-light,@app-message-color,@app-message-color-dark);
}
.app-todos {
	.fullcalendar(@app-todos-color-light,@app-todos-color,@app-todos-color-dark);
}
.app-etherpad {
	.fullcalendar(@app-etherpad-color-light,@app-etherpad-color,@app-etherpad-color-dark);
}

